--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,9 @@
+@import './styles/Header.scss';
+
 body {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .app {
