connected weather data to be displayed in components

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 @import './styles/Weather.scss';
 @import './styles/HourlyForecast.scss';
 @import './styles/MainPage.scss';
+@import './styles/WeatherIcon.scss';
 
 body {
     margin: 0;
