added basic layout for full report page

--- a/src/styles/MainHeader.scss
+++ b/src/styles/MainHeader.scss
@@ -1,10 +1,14 @@
-.header {
+.mainHeader {
     display: flex;
     justify-content: space-between;
 }
 
 .time {
     padding: 14px 0 0 10px;
+}
+
+.backArrow {
+    padding: 10px;
 }
 
 .menu {
