--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,9 @@
-@import './styles/Header.scss';
+@import './styles/MainHeader.scss';
 @import './styles/SearchBar.scss';
 @import './styles/Weather.scss';
 @import './styles/HourlyForecast.scss';
 @import './styles/MainPage.scss';
+@import './styles/FullReport.scss';
 
 body {
     margin: 0;
