--- a/src/styles/FullReport.scss
+++ b/src/styles/FullReport.scss
@@ -5,4 +5,8 @@
 
 .reportEntry {
     padding: 0 10px 0 10px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
 }
