added basic daily forecast page

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
 @import './styles/HourlyForecast.scss';
 @import './styles/MainPage.scss';
 @import './styles/FullReport.scss';
+@import './styles/DailyForecast.scss';
 
 body {
     margin: 0;
