added basic air quality page

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,8 @@
 @import './styles/MainPage.scss';
 @import './styles/FullReport.scss';
 @import './styles/DailyForecast.scss';
+@import './styles/Loading.scss';
+@import './styles/AirQuality.scss';
 
 body {
     margin: 0;
