--- a/src/styles/MainPage.scss
+++ b/src/styles/MainPage.scss
@@ -12,6 +12,10 @@
     padding-top: 10px;
 }
 
-.loadingWrapper {
+.errorWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     height: 450px;
 }
