Mostly finished autocomplete
Switched to use openweathermap developer pricing instead of free tier.

Fixed key issues in daily and full report lists.

Added new methods to get current weather data.

--- a/src/styles/DailyForecast.scss
+++ b/src/styles/DailyForecast.scss
@@ -16,11 +16,8 @@
     flex-direction: column;
 }
 
-.minMaxTemp {
-    display: flex;
-}
-
 .minMaxTempWrapper {
     display: flex;
     flex-direction: column;
+    padding-left: 10px;
 }
