--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
 @import './styles/DailyForecast.scss';
 @import './styles/Loading.scss';
 @import './styles/AirQuality.scss';
+@import './styles/DrawerSettings.scss';
 
 body {
     margin: 0;
